Progress on project

--- a/rough_draft.ipynb
+++ b/rough_draft.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee45b31b",
+   "id": "3cdbba4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8e014acd",
+   "id": "e16251d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ce6bdb6d",
+   "id": "4e3ce738",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7e866ce3",
+   "id": "b12041a0",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "43c9acf1",
+   "id": "5280dbde",
    "metadata": {
     "scrolled": false
    },
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "048dcaf1",
+   "id": "c4f15017",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cde85574",
+   "id": "5699fd0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d6859e9a",
+   "id": "c6dbefa6",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be9474fa",
+   "id": "9bd4ff38",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,280 @@
       "37850\n",
       "another cycle\n",
       "(501, 37)\n",
-      "37714\n"
+      "37714\n",
+      "another cycle\n",
+      "(601, 37)\n",
+      "37569\n",
+      "another cycle\n",
+      "(701, 39)\n",
+      "37416\n",
+      "another cycle\n",
+      "(801, 39)\n",
+      "37290\n",
+      "another cycle\n",
+      "(901, 40)\n",
+      "37112\n",
+      "another cycle\n",
+      "(1001, 40)\n",
+      "36971\n",
+      "another cycle\n",
+      "(1101, 40)\n",
+      "36835\n",
+      "another cycle\n",
+      "(1201, 40)\n",
+      "36716\n",
+      "another cycle\n",
+      "(1301, 40)\n",
+      "36574\n",
+      "another cycle\n",
+      "(1401, 42)\n",
+      "36444\n",
+      "another cycle\n",
+      "(1501, 42)\n",
+      "36300\n",
+      "another cycle\n",
+      "(1601, 43)\n",
+      "36166\n",
+      "another cycle\n",
+      "(1701, 43)\n",
+      "35988\n",
+      "another cycle\n",
+      "(1801, 43)\n",
+      "35865\n",
+      "another cycle\n",
+      "(1901, 43)\n",
+      "35737\n",
+      "another cycle\n",
+      "(2001, 43)\n",
+      "35611\n",
+      "another cycle\n",
+      "(2101, 44)\n",
+      "35487\n",
+      "another cycle\n",
+      "(2201, 45)\n",
+      "35349\n",
+      "another cycle\n",
+      "(2301, 45)\n",
+      "35228\n",
+      "another cycle\n",
+      "(2401, 45)\n",
+      "35106\n",
+      "another cycle\n",
+      "(2501, 45)\n",
+      "34969\n",
+      "another cycle\n",
+      "(2601, 45)\n",
+      "34840\n",
+      "another cycle\n",
+      "(2701, 45)\n",
+      "34702\n",
+      "another cycle\n",
+      "(2801, 45)\n",
+      "34571\n",
+      "another cycle\n",
+      "(2901, 45)\n",
+      "34416\n",
+      "another cycle\n",
+      "(3001, 45)\n",
+      "34276\n",
+      "another cycle\n",
+      "(3101, 45)\n",
+      "34136\n",
+      "another cycle\n",
+      "(3201, 45)\n",
+      "33975\n",
+      "another cycle\n",
+      "(3301, 45)\n",
+      "33823\n",
+      "another cycle\n",
+      "(3401, 45)\n",
+      "33704\n",
+      "another cycle\n",
+      "(3501, 45)\n",
+      "33571\n",
+      "another cycle\n",
+      "(3601, 45)\n",
+      "33436\n",
+      "another cycle\n",
+      "(3701, 45)\n",
+      "33307\n",
+      "another cycle\n",
+      "(3801, 45)\n",
+      "33179\n",
+      "another cycle\n",
+      "(3901, 45)\n",
+      "33046\n",
+      "another cycle\n",
+      "(4001, 45)\n",
+      "32931\n",
+      "another cycle\n",
+      "(4101, 45)\n",
+      "32800\n",
+      "another cycle\n",
+      "(4201, 45)\n",
+      "32642\n",
+      "another cycle\n",
+      "(4301, 45)\n",
+      "32511\n",
+      "another cycle\n",
+      "(4401, 45)\n",
+      "32380\n",
+      "another cycle\n",
+      "(4501, 45)\n",
+      "32249\n",
+      "another cycle\n",
+      "(4601, 45)\n",
+      "32114\n",
+      "another cycle\n",
+      "(4701, 45)\n",
+      "31987\n",
+      "another cycle\n",
+      "(4801, 45)\n",
+      "31860\n",
+      "another cycle\n",
+      "(4901, 45)\n",
+      "31743\n",
+      "another cycle\n",
+      "(5001, 45)\n",
+      "31621\n",
+      "another cycle\n",
+      "(5101, 45)\n",
+      "31476\n",
+      "another cycle\n",
+      "(5201, 45)\n",
+      "31349\n",
+      "another cycle\n",
+      "(5301, 45)\n",
+      "31201\n",
+      "another cycle\n",
+      "(5401, 45)\n",
+      "31050\n",
+      "another cycle\n",
+      "(5501, 45)\n",
+      "30915\n",
+      "another cycle\n",
+      "(5601, 45)\n",
+      "30773\n",
+      "another cycle\n",
+      "(5701, 45)\n",
+      "30647\n",
+      "another cycle\n",
+      "(5801, 45)\n",
+      "30542\n",
+      "another cycle\n",
+      "(5901, 45)\n",
+      "30433\n",
+      "another cycle\n",
+      "(6001, 45)\n",
+      "30304\n",
+      "another cycle\n",
+      "(6101, 45)\n",
+      "30178\n",
+      "another cycle\n",
+      "(6201, 45)\n",
+      "30053\n",
+      "another cycle\n",
+      "(6301, 45)\n",
+      "29914\n",
+      "another cycle\n",
+      "(6401, 45)\n",
+      "29783\n",
+      "another cycle\n",
+      "(6501, 45)\n",
+      "29649\n",
+      "another cycle\n",
+      "(6601, 45)\n",
+      "29539\n",
+      "another cycle\n",
+      "(6701, 45)\n",
+      "29425\n",
+      "another cycle\n",
+      "(6801, 45)\n",
+      "29308\n",
+      "another cycle\n",
+      "(6901, 45)\n",
+      "29190\n",
+      "another cycle\n",
+      "(7001, 45)\n",
+      "29077\n",
+      "another cycle\n",
+      "(7101, 45)\n",
+      "28938\n",
+      "another cycle\n",
+      "(7201, 45)\n",
+      "28804\n",
+      "another cycle\n",
+      "(7301, 45)\n",
+      "28682\n",
+      "another cycle\n",
+      "(7401, 45)\n",
+      "28558\n",
+      "another cycle\n",
+      "(7501, 45)\n",
+      "28444\n",
+      "another cycle\n",
+      "(7601, 45)\n",
+      "28317\n",
+      "another cycle\n",
+      "(7701, 46)\n",
+      "28194\n",
+      "another cycle\n",
+      "(7801, 46)\n",
+      "28080\n",
+      "another cycle\n",
+      "(7901, 46)\n",
+      "27950\n",
+      "another cycle\n",
+      "(8001, 46)\n",
+      "27839\n",
+      "another cycle\n",
+      "(8101, 46)\n",
+      "27729\n",
+      "another cycle\n",
+      "(8201, 46)\n",
+      "27608\n",
+      "another cycle\n",
+      "(8301, 46)\n",
+      "27490\n",
+      "another cycle\n",
+      "(8401, 46)\n",
+      "27374\n",
+      "another cycle\n",
+      "(8501, 47)\n",
+      "27254\n",
+      "another cycle\n",
+      "(8601, 47)\n",
+      "27128\n",
+      "another cycle\n",
+      "(8701, 47)\n",
+      "27017\n",
+      "another cycle\n",
+      "(8801, 47)\n",
+      "26892\n",
+      "another cycle\n",
+      "(8901, 47)\n",
+      "26778\n",
+      "another cycle\n",
+      "(9001, 47)\n",
+      "26654\n",
+      "another cycle\n",
+      "(9101, 47)\n",
+      "26534\n",
+      "another cycle\n",
+      "(9201, 47)\n",
+      "26400\n",
+      "another cycle\n",
+      "(9301, 47)\n",
+      "26282\n",
+      "another cycle\n",
+      "(9401, 47)\n",
+      "26163\n",
+      "another cycle\n",
+      "(9501, 47)\n",
+      "26043\n",
+      "another cycle\n",
+      "(9601, 47)\n",
+      "25933\n"
      ]
     }
    ],
