Finished utilizing geo location data

--- a/rough_draft.ipynb
+++ b/rough_draft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3cdbba4a",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import warnings\n",
     "\n",
-    "\n",
+    "warnings.filterwarnings('ignore')\n",
     "from acquire import get_zillow_data\n",
     "from pyzipcode import ZipCodeDatabase\n",
     "from geopy.geocoders import Nominatim\n",
@@ -407,31 +407,31 @@
        "      <th>fips</th>\n",
        "      <th>regionidzip</th>\n",
        "      <th>...</th>\n",
-       "      <th>natural</th>\n",
-       "      <th>residential</th>\n",
-       "      <th>village</th>\n",
-       "      <th>hamlet</th>\n",
-       "      <th>shop</th>\n",
-       "      <th>city_district</th>\n",
-       "      <th>amenity</th>\n",
-       "      <th>quarter</th>\n",
-       "      <th>building</th>\n",
-       "      <th>population</th>\n",
+       "      <th>leisure</th>\n",
+       "      <th>man_made</th>\n",
+       "      <th>retail</th>\n",
+       "      <th>historic</th>\n",
+       "      <th>aeroway</th>\n",
+       "      <th>railway</th>\n",
+       "      <th>commercial</th>\n",
+       "      <th>place</th>\n",
+       "      <th>office</th>\n",
+       "      <th>craft</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>33922098</td>\n",
+       "      <td>-117954970</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1125.0</td>\n",
+       "      <td>289445</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>3490.16</td>\n",
+       "      <td>6059</td>\n",
+       "      <td>96186.0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -446,39 +446,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>33922098.0</td>\n",
-       "      <td>-117954970.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1125.0</td>\n",
-       "      <td>289445.0</td>\n",
-       "      <td>1974.0</td>\n",
-       "      <td>3490.16</td>\n",
-       "      <td>6059.0</td>\n",
-       "      <td>96186.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>16769.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>34033180.0</td>\n",
-       "      <td>-118355396.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>34033180</td>\n",
+       "      <td>-118355396</td>\n",
+       "      <td>3</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1316.0</td>\n",
-       "      <td>205123.0</td>\n",
+       "      <td>205123</td>\n",
        "      <td>1923.0</td>\n",
        "      <td>2627.48</td>\n",
-       "      <td>6037.0</td>\n",
+       "      <td>6037</td>\n",
        "      <td>95997.0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -490,19 +466,19 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>29049.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>34686163.0</td>\n",
-       "      <td>-118113100.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>34686163</td>\n",
+       "      <td>-118113100</td>\n",
+       "      <td>3</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1458.0</td>\n",
-       "      <td>136104.0</td>\n",
+       "      <td>136104</td>\n",
        "      <td>1970.0</td>\n",
        "      <td>2319.90</td>\n",
-       "      <td>6037.0</td>\n",
+       "      <td>6037</td>\n",
        "      <td>97318.0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -514,19 +490,19 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>10372.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>34073222.0</td>\n",
-       "      <td>-118390965.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>34073222</td>\n",
+       "      <td>-118390965</td>\n",
+       "      <td>3</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1766.0</td>\n",
-       "      <td>810694.0</td>\n",
+       "      <td>810694</td>\n",
        "      <td>1980.0</td>\n",
        "      <td>9407.01</td>\n",
-       "      <td>6037.0</td>\n",
+       "      <td>6037</td>\n",
        "      <td>96086.0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -538,43 +514,60 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5079.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>33999877</td>\n",
+       "      <td>-118291863</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1421.0</td>\n",
+       "      <td>35606</td>\n",
+       "      <td>1911.0</td>\n",
+       "      <td>543.69</td>\n",
+       "      <td>6037</td>\n",
+       "      <td>96018.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 35 columns</p>\n",
+       "<p>5 rows × 47 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     latitude    longitude  bedroomcnt  bathroomcnt  \\\n",
-       "0         NaN          NaN         NaN          NaN   \n",
-       "1  33922098.0 -117954970.0         3.0          2.0   \n",
-       "2  34033180.0 -118355396.0         3.0          2.0   \n",
-       "3  34686163.0 -118113100.0         3.0          2.0   \n",
-       "4  34073222.0 -118390965.0         3.0          2.0   \n",
+       "   latitude  longitude  bedroomcnt  bathroomcnt  calculatedfinishedsquarefeet  \\\n",
+       "0  33922098 -117954970           3          2.0                        1125.0   \n",
+       "1  34033180 -118355396           3          2.0                        1316.0   \n",
+       "2  34686163 -118113100           3          2.0                        1458.0   \n",
+       "3  34073222 -118390965           3          2.0                        1766.0   \n",
+       "4  33999877 -118291863           2          1.0                        1421.0   \n",
        "\n",
-       "   calculatedfinishedsquarefeet  taxvaluedollarcnt  yearbuilt  taxamount  \\\n",
-       "0                           NaN                NaN        NaN        NaN   \n",
-       "1                        1125.0           289445.0     1974.0    3490.16   \n",
-       "2                        1316.0           205123.0     1923.0    2627.48   \n",
-       "3                        1458.0           136104.0     1970.0    2319.90   \n",
-       "4                        1766.0           810694.0     1980.0    9407.01   \n",
+       "   taxvaluedollarcnt  yearbuilt  taxamount  fips  regionidzip  ...  leisure  \\\n",
+       "0             289445     1974.0    3490.16  6059      96186.0  ...      NaN   \n",
+       "1             205123     1923.0    2627.48  6037      95997.0  ...      NaN   \n",
+       "2             136104     1970.0    2319.90  6037      97318.0  ...      NaN   \n",
+       "3             810694     1980.0    9407.01  6037      96086.0  ...      NaN   \n",
+       "4              35606     1911.0     543.69  6037      96018.0  ...      NaN   \n",
        "\n",
-       "     fips  regionidzip  ...  natural  residential village hamlet shop  \\\n",
-       "0     NaN          NaN  ...      NaN          NaN     NaN    NaN  NaN   \n",
-       "1  6059.0      96186.0  ...      NaN          NaN     NaN    NaN  NaN   \n",
-       "2  6037.0      95997.0  ...      NaN          NaN     NaN    NaN  NaN   \n",
-       "3  6037.0      97318.0  ...      NaN          NaN     NaN    NaN  NaN   \n",
-       "4  6037.0      96086.0  ...      NaN          NaN     NaN    NaN  NaN   \n",
+       "   man_made retail historic aeroway railway commercial place office craft  \n",
+       "0       NaN    NaN      NaN     NaN     NaN        NaN   NaN    NaN   NaN  \n",
+       "1       NaN    NaN      NaN     NaN     NaN        NaN   NaN    NaN   NaN  \n",
+       "2       NaN    NaN      NaN     NaN     NaN        NaN   NaN    NaN   NaN  \n",
+       "3       NaN    NaN      NaN     NaN     NaN        NaN   NaN    NaN   NaN  \n",
+       "4       NaN    NaN      NaN     NaN     NaN        NaN   NaN    NaN   NaN  \n",
        "\n",
-       "  city_district amenity quarter building population  \n",
-       "0           NaN     NaN     NaN      NaN        NaN  \n",
-       "1           NaN     NaN     NaN      NaN    16769.0  \n",
-       "2           NaN     NaN     NaN      NaN    29049.0  \n",
-       "3           NaN     NaN     NaN      NaN    10372.0  \n",
-       "4           NaN     NaN     NaN      NaN     5079.0  \n",
-       "\n",
-       "[5 rows x 35 columns]"
+       "[5 rows x 47 columns]"
       ]
      },
      "execution_count": 8,
@@ -596,329 +589,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9bd4ff38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# while unlocated_df.shape[0] != 0:\n",
+    "#     location_df = pd.read_csv('location_and_zillow_data.csv')\n",
+    "#     print(location_df.shape)\n",
+    "#     # Checks to see if the data has been found\n",
+    "#     unlocated_df = df[~((df.latitude.isin(location_df.latitude)) & (df.longitude.isin(location_df.longitude)))]\n",
+    "#     print(unlocated_df.shape[0])\n",
+    "#     location_df.head()\n",
+    "#     cycle(unlocated_df, location_df)\n",
+    "#     print('another cycle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "763130c5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(201, 35)\n",
-      "38140\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-7-0d9f6b617e78>:12: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  temp_df['location'] = temp_df.apply(lambda x: location_lookup(x.latitude, x.longitude), axis=1)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "another cycle\n",
-      "(301, 37)\n",
-      "38021\n",
-      "another cycle\n",
-      "(401, 37)\n",
-      "37850\n",
-      "another cycle\n",
-      "(501, 37)\n",
-      "37714\n",
-      "another cycle\n",
-      "(601, 37)\n",
-      "37569\n",
-      "another cycle\n",
-      "(701, 39)\n",
-      "37416\n",
-      "another cycle\n",
-      "(801, 39)\n",
-      "37290\n",
-      "another cycle\n",
-      "(901, 40)\n",
-      "37112\n",
-      "another cycle\n",
-      "(1001, 40)\n",
-      "36971\n",
-      "another cycle\n",
-      "(1101, 40)\n",
-      "36835\n",
-      "another cycle\n",
-      "(1201, 40)\n",
-      "36716\n",
-      "another cycle\n",
-      "(1301, 40)\n",
-      "36574\n",
-      "another cycle\n",
-      "(1401, 42)\n",
-      "36444\n",
-      "another cycle\n",
-      "(1501, 42)\n",
-      "36300\n",
-      "another cycle\n",
-      "(1601, 43)\n",
-      "36166\n",
-      "another cycle\n",
-      "(1701, 43)\n",
-      "35988\n",
-      "another cycle\n",
-      "(1801, 43)\n",
-      "35865\n",
-      "another cycle\n",
-      "(1901, 43)\n",
-      "35737\n",
-      "another cycle\n",
-      "(2001, 43)\n",
-      "35611\n",
-      "another cycle\n",
-      "(2101, 44)\n",
-      "35487\n",
-      "another cycle\n",
-      "(2201, 45)\n",
-      "35349\n",
-      "another cycle\n",
-      "(2301, 45)\n",
-      "35228\n",
-      "another cycle\n",
-      "(2401, 45)\n",
-      "35106\n",
-      "another cycle\n",
-      "(2501, 45)\n",
-      "34969\n",
-      "another cycle\n",
-      "(2601, 45)\n",
-      "34840\n",
-      "another cycle\n",
-      "(2701, 45)\n",
-      "34702\n",
-      "another cycle\n",
-      "(2801, 45)\n",
-      "34571\n",
-      "another cycle\n",
-      "(2901, 45)\n",
-      "34416\n",
-      "another cycle\n",
-      "(3001, 45)\n",
-      "34276\n",
-      "another cycle\n",
-      "(3101, 45)\n",
-      "34136\n",
-      "another cycle\n",
-      "(3201, 45)\n",
-      "33975\n",
-      "another cycle\n",
-      "(3301, 45)\n",
-      "33823\n",
-      "another cycle\n",
-      "(3401, 45)\n",
-      "33704\n",
-      "another cycle\n",
-      "(3501, 45)\n",
-      "33571\n",
-      "another cycle\n",
-      "(3601, 45)\n",
-      "33436\n",
-      "another cycle\n",
-      "(3701, 45)\n",
-      "33307\n",
-      "another cycle\n",
-      "(3801, 45)\n",
-      "33179\n",
-      "another cycle\n",
-      "(3901, 45)\n",
-      "33046\n",
-      "another cycle\n",
-      "(4001, 45)\n",
-      "32931\n",
-      "another cycle\n",
-      "(4101, 45)\n",
-      "32800\n",
-      "another cycle\n",
-      "(4201, 45)\n",
-      "32642\n",
-      "another cycle\n",
-      "(4301, 45)\n",
-      "32511\n",
-      "another cycle\n",
-      "(4401, 45)\n",
-      "32380\n",
-      "another cycle\n",
-      "(4501, 45)\n",
-      "32249\n",
-      "another cycle\n",
-      "(4601, 45)\n",
-      "32114\n",
-      "another cycle\n",
-      "(4701, 45)\n",
-      "31987\n",
-      "another cycle\n",
-      "(4801, 45)\n",
-      "31860\n",
-      "another cycle\n",
-      "(4901, 45)\n",
-      "31743\n",
-      "another cycle\n",
-      "(5001, 45)\n",
-      "31621\n",
-      "another cycle\n",
-      "(5101, 45)\n",
-      "31476\n",
-      "another cycle\n",
-      "(5201, 45)\n",
-      "31349\n",
-      "another cycle\n",
-      "(5301, 45)\n",
-      "31201\n",
-      "another cycle\n",
-      "(5401, 45)\n",
-      "31050\n",
-      "another cycle\n",
-      "(5501, 45)\n",
-      "30915\n",
-      "another cycle\n",
-      "(5601, 45)\n",
-      "30773\n",
-      "another cycle\n",
-      "(5701, 45)\n",
-      "30647\n",
-      "another cycle\n",
-      "(5801, 45)\n",
-      "30542\n",
-      "another cycle\n",
-      "(5901, 45)\n",
-      "30433\n",
-      "another cycle\n",
-      "(6001, 45)\n",
-      "30304\n",
-      "another cycle\n",
-      "(6101, 45)\n",
-      "30178\n",
-      "another cycle\n",
-      "(6201, 45)\n",
-      "30053\n",
-      "another cycle\n",
-      "(6301, 45)\n",
-      "29914\n",
-      "another cycle\n",
-      "(6401, 45)\n",
-      "29783\n",
-      "another cycle\n",
-      "(6501, 45)\n",
-      "29649\n",
-      "another cycle\n",
-      "(6601, 45)\n",
-      "29539\n",
-      "another cycle\n",
-      "(6701, 45)\n",
-      "29425\n",
-      "another cycle\n",
-      "(6801, 45)\n",
-      "29308\n",
-      "another cycle\n",
-      "(6901, 45)\n",
-      "29190\n",
-      "another cycle\n",
-      "(7001, 45)\n",
-      "29077\n",
-      "another cycle\n",
-      "(7101, 45)\n",
-      "28938\n",
-      "another cycle\n",
-      "(7201, 45)\n",
-      "28804\n",
-      "another cycle\n",
-      "(7301, 45)\n",
-      "28682\n",
-      "another cycle\n",
-      "(7401, 45)\n",
-      "28558\n",
-      "another cycle\n",
-      "(7501, 45)\n",
-      "28444\n",
-      "another cycle\n",
-      "(7601, 45)\n",
-      "28317\n",
-      "another cycle\n",
-      "(7701, 46)\n",
-      "28194\n",
-      "another cycle\n",
-      "(7801, 46)\n",
-      "28080\n",
-      "another cycle\n",
-      "(7901, 46)\n",
-      "27950\n",
-      "another cycle\n",
-      "(8001, 46)\n",
-      "27839\n",
-      "another cycle\n",
-      "(8101, 46)\n",
-      "27729\n",
-      "another cycle\n",
-      "(8201, 46)\n",
-      "27608\n",
-      "another cycle\n",
-      "(8301, 46)\n",
-      "27490\n",
-      "another cycle\n",
-      "(8401, 46)\n",
-      "27374\n",
-      "another cycle\n",
-      "(8501, 47)\n",
-      "27254\n",
-      "another cycle\n",
-      "(8601, 47)\n",
-      "27128\n",
-      "another cycle\n",
-      "(8701, 47)\n",
-      "27017\n",
-      "another cycle\n",
-      "(8801, 47)\n",
-      "26892\n",
-      "another cycle\n",
-      "(8901, 47)\n",
-      "26778\n",
-      "another cycle\n",
-      "(9001, 47)\n",
-      "26654\n",
-      "another cycle\n",
-      "(9101, 47)\n",
-      "26534\n",
-      "another cycle\n",
-      "(9201, 47)\n",
-      "26400\n",
-      "another cycle\n",
-      "(9301, 47)\n",
-      "26282\n",
-      "another cycle\n",
-      "(9401, 47)\n",
-      "26163\n",
-      "another cycle\n",
-      "(9501, 47)\n",
-      "26043\n",
-      "another cycle\n",
-      "(9601, 47)\n",
-      "25933\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0             16769\n",
+       "1             29049\n",
+       "2             10372\n",
+       "3              5079\n",
+       "4             14649\n",
+       "            ...    \n",
+       "34239         90004\n",
+       "34240         92804\n",
+       "34241         92673\n",
+       "34242    91326-1729\n",
+       "34243    91311-4127\n",
+       "Name: population, Length: 34244, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "while unlocated_df.shape[0] != 0:\n",
-    "    location_df = pd.read_csv('location_and_zillow_data.csv')\n",
-    "    print(location_df.shape)\n",
-    "    # Checks to see if the data has been found\n",
-    "    unlocated_df = df[~((df.latitude.isin(location_df.latitude)) & (df.longitude.isin(location_df.longitude)))]\n",
-    "    print(unlocated_df.shape[0])\n",
-    "    location_df.head()\n",
-    "    cycle(unlocated_df, location_df)\n",
-    "    print('another cycle')"
+    "location_df.population"
    ]
   }
  ],
